--- a/Touristation/Touristation/Site1.Master
+++ b/Touristation/Touristation/Site1.Master
@@ -11,6 +11,23 @@
 <body>
     <form id="form1" runat="server">
         <div>
+
+            <header>
+	        <p class="banner" >Orchid Banking</p>
+	        <!-- Navigation menu-->
+	        <nav>
+		        <ul>
+			        <li><a href="">Home</a></li>
+			        <li><a href="">Events</a></li>
+			        <li><a href="">Deals </a></li>
+			        <li><a href="">Competitions</a></li>
+                    <li><a href="">Itinerary</a></li>
+                    <li><a href="">My Account</a></li>
+		        </ul>
+	        </nav>
+        </header>
+
+
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
