--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -1,10 +1,14 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Homepage.Master.cs" Inherits="Touristation.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Touristation.Master.cs" Inherits="Touristation.Site1" %>
 
 <!DOCTYPE html>
 
 <html>
 <head runat="server">
     <title></title>
+    <link href="Content/bootstrap.css" rel="stylesheet" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="Scripts/jquery-2.2.4.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -13,7 +17,7 @@
         <div>
 
             <header>
-	        <p class="banner" >Orchid Banking</p>
+	        <p class="banner" >Touristation</p>
 	        <!-- Navigation menu-->
 	        <nav>
 		        <ul>
