--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -25,7 +25,8 @@
 			        <li><a href="">Deals </a></li>
 			        <li><a href="">Competitions</a></li>
                     <li><a href="">Itinerary</a></li>
-                    <li><a href="">My Account</a></li>
+                    <li><a href="Profile.aspx"> <asp:Label runat="server" ID="Message">Welcome </asp:Label> </a></li>
+                    <li><a Id="logout">Logout</a></li>
                     </asp:Panel>
                     <asp:Panel ID="guestPanel" visible="false" runat="server">
                     
@@ -45,5 +46,8 @@
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
+
+  
 </body>
+    
 </html>
