--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -26,7 +26,7 @@
                     <li><a href="">Home</a></li>
 			        <li><a href="">Events</a></li>
 			        <li><a href="">Deals </a></li>
-			        <li><a href="">Competitions</a></li>
+			        <li><a href="CreateCompetition.aspx">Competitions</a></li>
                     <li><a href="">Itinerary</a></li>
                     <li><a href="Profile.aspx"> <asp:Label runat="server" ID="Message">Welcome </asp:Label>
                         <li><a Id="logout">Logout</a></li>
