fixed and dealt with Admin details

--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -21,7 +21,7 @@
                 <asp:Panel ID="userPanel" visible="false" runat="server">
 	        <nav class="navbar navbar-light navbar-expand-sm bg-white">
 		        
-                    <div class="container col-xs-12">
+                    <div class="container">
                         <ul>
                     <li class="active nav-tabs col-xs-1"><a href="">Home</a></li>
 			        <li class="nav-tabs col-xs-1"><a href="">Events</a></li>
@@ -29,7 +29,7 @@
 			        <li class="active col-xs-1"><a href="ViewCompetitions.aspx">Competitions</a></li>
                     <li class="active col-xs-1"><a href="">Itinerary</a></li>
                     <li class="active col-xs-1"><a href="Profile.aspx"> <asp:Label runat="server" ID="Message">Welcome </asp:Label>
-                        <li class="col-xs-1"><a Id="logout">Logout</a></li>
+                        <li class="col-xs-1"><a href="Logout.aspx">Logout</a></li>
                         </a> 
                         </ul> 
                     
@@ -37,9 +37,9 @@
                     
                     </nav> 
                     </asp:Panel>
-                    <asp:Panel ID="guestPanel" visible="false" runat="server" CssClass="panel">
+                    <asp:Panel ID="guestPanel" visible="false" runat="server">
                     <nav class="navbar navbar-light navbar-expand-sm bg-white">
-                         <div class="container col-xs-12">
+                         <div class="container">
                         <ul> 
                             <li class="col-xs-2"><a href="">Events</a></li>
 			                <li class="col-xs-2"><a href="">Deals </a></li>
@@ -50,6 +50,16 @@
 	                </nav> 
                     </asp:Panel>
                     
+                <asp:Panel Visible="false" Id="adminPanel" runat="server"> 
+                    <nav class="navbar">
+                        <div class="container"> 
+                            <ul>
+                                <li><a href="CreateCompetition.aspx"> Create Competitions </a></li>
+                                <li><a href="Logout.aspx"> Logout </a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </asp:Panel>
 		        
         </header>
 
