--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -69,6 +69,12 @@
 
 
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                 <div class="container">
+            <div class="container"> 
+                <div class="container"> 
+                    </div>
+                </div> 
+                     </div> 
             </asp:ContentPlaceHolder>
         </div>
 
