--- a/Touristation/Touristation/Touristation.Master
+++ b/Touristation/Touristation/Touristation.Master
@@ -19,52 +19,60 @@
 	        
 	        <!-- Navigation menu-->
                 <asp:Panel ID="userPanel" visible="false" runat="server">
-	        <nav class="nav navbar-nav">
-		        
-                    <div class="container-fluid">
+	        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+                    <div class="container col-lg-12">
                         <div class="navbar-banner">
                             Touristation
                         </div>
                         <ul>
                     <li class="active"><a href="">Home</a></li>
-			        <li class="col-xs-1"><a href="">Events</a></li>
-			        <li class="col-xs-1"><a href="">Deals </a></li>
-			        <li class="col-xs-1"><a href="ViewCompetitions.aspx">Competitions</a></li>
-                    <li class="col-xs-1"><a href="CreateItenary.aspx">Itinerary</a></li>
-                    <li class="col-xs-1"><a href="Profile.aspx"> <asp:Label runat="server" ID="Message">Welcome </asp:Label>
-                        <li class="col-xs-1"><a href="Logout.aspx">Logout</a></li>
+			        <li class="active"><a href="">Events</a></li>
+			        <li class="active"><a href="">Deals </a></li>
+			        <li class=""><a href="ViewCompetitions.aspx">Competitions</a></li>
+                    <li class=""><a href="CreateItenary.aspx">Itinerary</a></li>
+                    <li class=""><a href="Profile.aspx"> <asp:Label runat="server" ID="Message">Welcome </asp:Label>
+                        <li class=""><a href="Logout.aspx">Logout</a></li>
                         </a> 
                         </ul> 
                     
                     </div>
                     
                     </nav> 
+                    <br /> 
                     </asp:Panel>
                     <asp:Panel ID="guestPanel" visible="false" runat="server">
-                    <nav class="nav navbar-nav">
-                         <div class="container-fluid">
+                    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+                         <div class="container col-lg-12">
+                             <div class="navbar-banner">
+                            Touristation
+                        </div>
                         <ul> 
-                            <li class="col-xs-2"><a href="">Events</a></li>
-			                <li class="col-xs-2"><a href="">Deals </a></li>
-                            <li class="col-xs-2"><a href="Login.aspx">Login</a></li>
-			                <li class="col-xs-2"><a href="Register.aspx">Signup </a></li>
+                            <li class=""><a href="">Events</a></li>
+			                <li class=""><a href="">Deals </a></li>
+                            <li class=""><a href="Login.aspx">Login</a></li>
+			                <li class=""><a href="Register.aspx">Signup </a></li>
                         </ul>
                     </div>
 	                </nav> 
+                        <br /> 
                     </asp:Panel>
                     
                 <asp:Panel Visible="false" Id="adminPanel" runat="server"> 
-                    <nav class="nav navbar-nav">
-                        <div class="container-fluid"> 
+                    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+                        <div class="container col-lg-12"> 
+                            <div class="navbar-banner">
+                            Touristation
+                        </div>
                             <ul>
                                 <li><a href="CreateCompetition.aspx"> Create Competitions </a></li>
-                                <li class="active col-xs-1"><asp:Label runat="server" ID="LblWel">Welcome </asp:Label>
+                                <li><a href="ManageCompetitions.aspx"> Manage Competitions </a></li>
+                                
                                 <li><a href="Logout.aspx"> Logout </a></li>
                             </ul>
                         </div>
                     </nav>
                 </asp:Panel>
-		        
+		        <br />
         </header>
 
           
