--- a/Touristation/Touristation/Content/StyleSheet.css
+++ b/Touristation/Touristation/Content/StyleSheet.css
@@ -3,7 +3,7 @@
 
 nav {
     margin-top: 0px;
-    background-color: rgba(255,0,0,0.1);
+    background-color: #191970;
 }
 
     nav ul {
@@ -14,7 +14,8 @@ nav {
             display: inline-block; /*inline-Block display the url link in block style */
             padding: 10px;
             margin: 10px;
-            border: 2px solid rgba(255,0,0,0.2);
+            border: 2px solid #191970;
+            color: white; 
         }
 
     nav a {
