--- a/Touristation/Touristation/Content/bootstrap.css
+++ b/Touristation/Touristation/Content/bootstrap.css
@@ -4170,6 +4170,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
+  background-color: #191970; 
   border: 1px solid transparent;
 }
 @media (min-width: 768px) {
