--- a/Touristation/Touristation/Content/bootstrap.css
+++ b/Touristation/Touristation/Content/bootstrap.css
@@ -3981,18 +3981,18 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav > li {
   position: relative;
-  display: inline-block;
+  display: block;
 }
 .nav > li > a {
   position: relative;
   display: block;
   padding: 10px 15px;
 }
-    .nav > li > a:hover,
-    .nav > li > a:focus {
-        text-decoration: none;
-        background-color: #191970;
-    }
+.nav > li > a:hover,
+.nav > li > a:focus {
+  text-decoration: none;
+  background-color: #eee;
+}
 .nav > li.disabled > a {
   color: #777;
 }
