--- a/Touristation/Touristation/Content/bootstrap.css
+++ b/Touristation/Touristation/Content/bootstrap.css
@@ -3975,9 +3975,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: -1px;
 }
 .nav {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    background-color: #191970;
 }
 .nav > li {
   position: relative;
